Update Devanagari Image Querying.ipynb

--- a/Jupyter_notebook/Devanagari Image Querying.ipynb
+++ b/Jupyter_notebook/Devanagari Image Querying.ipynb
@@ -773,7 +773,7 @@
    "metadata": {},
    "source": [
     "#### Conclusion\n",
-    "Success! The five closest images are very similar to our query. This conclusion our Devanagari CNN autoencoder with kNN for querying images."
+    "Success! The five closest images are very similar to our query. This concludes our Devanagari CNN autoencoder with kNN for querying images."
    ]
   }
  ],
